# reflective_resonance

./: .env.example  .gitignore  CLAUDE.md  README.md  decompose_audio_v3.py  decompose_audio_v4.py  eleven_labs_voice_profiles.md  main.py  mvp-back-end-prd.md  mvp-front-end-prd.md  mvp_audio_input.md  mvp_decompose_audio.md  mvp_events_websocket.md  mvp_three_turn_workflow.md  mvp_voice_profiles.md  pyproject.toml  rawagents_for_reflective_resonance.md  websocket_callback.py
.claude/: settings.local.json
backend/: __init__.py  agents.py  config.py  conversations.py  main.py  models.py  sessions.py  streaming.py  workflow.py
backend/events/: __init__.py  models.py  orchestrator.py  state.py  websocket.py
backend/prompts/: __init__.py  sentiment_analysis.j2  turn1_response.j2  turn2_comment_select.j2  turn3_reply.j2  turn4_summary.j2
backend/sentiment/: __init__.py  analyzer.py  models.py
backend/stt/: __init__.py  elevenlabs_stt.py  models.py  sessions.py
backend/tts/: __init__.py  elevenlabs_client.py  multi_voice_tts.py  profiles.py  wav.py
backend/waves/: __init__.py  decompose_v3.py  paths.py  worker.py
frontend/: components.json  package-lock.json  package.json
frontend/src/: app.css
frontend/src/lib/: utils.ts
frontend/src/lib/components/: AgentCard.svelte  AgentPalette.svelte  AudioInputDock.svelte  ChatDock.svelte  GuidanceText.svelte  ResponseCard.svelte  ResponsesPanel.svelte  SpeakerSlotRing.svelte  SpeakerSlots.svelte
frontend/src/lib/config/: agents.ts  constants.ts
frontend/src/routes/: +page.svelte
scripts/: tts_demo.py
(+4 files in other folders)
