[project]
name = "reflective-resonance"
version = "0.1.0"
description = "Reflective Resonance art installation backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "rawagents @ git+https://github.com/asaficontact/rawagents.git@v0.1.0",
    "elevenlabs>=1.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
